--- a/assets/conf.d/template/logback-client.xml
+++ b/assets/conf.d/template/logback-client.xml
@@ -1,10 +1,10 @@
 <configuration>
   <appender name="FILE"
     class="ch.qos.logback.core.rolling.RollingFileAppender">
-    <file>/var/log/waarp/server1.log</file>
+    <file>/var/log/waarp/gwftp-client.log</file>
     <append>true</append>
     <rollingPolicy class="ch.qos.logback.core.rolling.TimeBasedRollingPolicy">
-      <fileNamePattern>/var/log/waarp/server1.%d{yyyy-MM-dd}.%i.log.zip</fileNamePattern>
+      <fileNamePattern>/var/log/waarp/gwftp-client.%d{yyyy-MM-dd}.%i.log.zip</fileNamePattern>
       <maxHistory>30</maxHistory>
       <timeBasedFileNamingAndTriggeringPolicy class="ch.qos.logback.core.rolling.SizeAndTimeBasedFNATP">
           <maxFileSize>10MB</maxFileSize>
