--- a/centos/assets/conf.d/template/logback-client.xml
+++ b/centos/assets/conf.d/template/logback-client.xml
@@ -35,6 +35,7 @@
   <root>
     <level value="warn" />
     <appender-ref ref="FILE" />
+    <appender-ref ref="STDOUT" />
     <!-- <appender-ref ref="SYSLOG" /> -->
   </root>
 </configuration>
